test: update tests after change docker-compose.yaml